prod/polybot/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
  namespace: prod
  labels:
    app: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
        labels:
          app: polybot
    spec:
      containers:
      - name: server
        image: galgu/polybot:c9398e3e080382df5ed289542b333ed8a067cc7e
        ports:
        - containerPort: 8443 # Ensure this matches your application's listening port
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: prod
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
