prod/polybot/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - galgu.int-devops.click
    secretName: my-tls2-secret
  rules:
  - host: galgu.int-devops.click
    http:
      paths:
      - path: /  # Correctly specified under paths
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443
  ingressClassName: nginx  # Ensure this is at the right level
